# TBKOSTER

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  TBKExamples.tgz
.github/workflows/: compile.yaml
doc/: Formalism.tex  Userguide.tex
src/: atom.f90  atom_refactor.f90  atom_tb.f90  average_operators.f90  band_structure.f90  calculation.f90  charge.f90  constant.f90  density_of_states.f90  element.f90  element_tb.f90  energy.f90  forces.f90  hamiltonian_tb.f90  lattice.f90  magnetic_force_theorem.f90  math.f90  mesh.f90  mixing.f90  molecular_dynamics.f90  precision.f90  self_consistent_field.f90  spin_dynamics.f90  string.f90  units.f90
src/before_refactor/: atom.f90
tb_parameters/: au_par_fcc_bcc_sc_lda_no_pp_dd  au_par_fcc_bcc_sc_lda_wire  au_par_fcc_bcc_sc_lda_wire_no_sp_sd_pd  ge_par.spd.125
tools/: CMakeLists.txt  bands.f90  dat2gnu.f90  linear_response.f90  mft.f90
unit_tests/atom/: CMakeLists.txt  main.f90
unit_tests/element/: main.f90
unit_tests/element_tb/: main.f90
unit_tests/lattice/: CMakeLists.txt  main.f90
unit_tests/math/: CMakeLists.txt
